// Version: 1.1
// Date: 15.12.2019
syntax = "proto3";
package netcode;

import "nim.proto";
import "dots-and-boxes.proto";

service GameCom {
	rpc NewMatch (MatchRequest) returns (MatchResponse);
	rpc SubmitTurn (TurnRequest) returns (TurnResponse);
	rpc GetGameState (GameStateRequest) returns (GameStateResponse);
	rpc UserRegistration (UserRegistrationRequest) returns (UserRegistrationResponse);
	rpc GroupRegistration (GroupRegistrationRequest) returns (GroupRegistrationResponse);
	rpc GetUserToken (AuthPacket) returns (GetUserTokenResponse);
	rpc SetGroupPseudonym (SetPseudonymRequest) returns (SetPseudonymResponse);
	rpc SetUserPseudonym (SetPseudonymRequest) returns (SetPseudonymResponse);
	rpc AbortMatch (AbortMatchRequest) returns (Nothing);
}

message AuthPacket {
	string matr_number = 1;
	string secret = 2;
}

message SetPseudonymRequest {
	AuthPacket auth = 1;
	string pseudonym = 2;
}

message SetPseudonymResponse {
	enum ErrorCode {
		UNDEFINED_ERROR = 0;
		OK = 1;
		REQUEST_REJECTED = 2;
		ALREADY_USED = 3;
		TOO_LONG = 4;
		EMPTY_FIELDS = 5;
	}
	ErrorCode error_code = 1;
}

message GetUserTokenResponse {
	string user_token = 1;
}

message UserRegistrationRequest {
	string fullname = 1;
	string email = 2;
	string matr_number = 3;
	string secret = 4;
}

message UserRegistrationResponse {
	enum ErrorCode {
		UNDEFINED_ERROR = 0;
		OK = 1;
		INVALID_PARAMETER = 2;
		EMPTY_FIELDS = 3;
		NOT_ALLOWED = 4;
	}
	ErrorCode error_code = 1;
}

message GroupRegistrationRequest
{
	AuthPacket auth = 1;
	repeated string matr_number = 2;
}

message GroupRegistrationResponse
{
	enum ErrorCode {
		UNDEFINED_ERROR = 0;
		OK = 1;
		UNKNOWN_USER = 2;
		TOO_MANY_GROUP_MEMBERS = 3;
		USER_ALREADY_REGISTERED = 4;
		AUTH_FAILED = 5;
	}
	ErrorCode error_code = 1;
}

message MatchRequest {
	string user_token = 1;
	string game_token = 2;
	string matchmaking_parameters = 3;
	oneof game_parameters
	{
		nim.GameParameter nim_game_parameters = 4;
		dab.GameParameter dab_game_parameters = 5;
	}
}

message MatchResponse {
	string match_token = 1;
	bool beginning_player = 2;
}

message TurnRequest {
	string user_token = 1;
	string match_token = 2;
	oneof game_turn
	{
		nim.GameTurn nim_game_turn = 3;
		dab.GameTurn dab_game_turn = 4;
	}
}

enum TurnStatus {
	OK = 0;
	INVALID_TURN = 1;
	NOT_YOUR_TURN = 2;
	MATCH_OVER = 3;
}

message TurnResponse {
	TurnStatus turn_status = 1;
	oneof game_state
	{
		nim.GameState nim_game_state = 2;
		dab.GameState dab_game_state = 3;
	}
}

message GameStateRequest {
	string user_token = 1;
	string match_token = 2;
}

enum GameStatus {
	YOUR_TURN = 0;
	OPPONENTS_TURN = 1;
	MATCH_WON = 3;
	MATCH_LOST = 4;
	DRAW = 5;
	MATCH_NOT_STARTED = 6;
	MATCH_ABORTED = 7;
}

message GameStateResponse {

	GameStatus game_status = 1;
	oneof game_state
	{
		nim.GameState nim_game_state = 2;
		dab.GameState dab_game_state = 3;
	}
	bool beginning_player = 4;
}

message AbortMatchRequest {
	string user_token = 1;
	string match_token = 2;
}

message Nothing
{
}